<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaCalculator_MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/LengthOneTextView"
        android:layout_width="69dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/LengthOneTextView"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LengthTwoTextView"
        android:layout_width="69dp"
        android:layout_height="30dp"
        android:layout_marginBottom="352dp"
        android:layout_marginTop="16dp"
        android:text="@string/LengthTwoTextView"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LengthOneTextView"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/LengthOneTextView"
        app:layout_constraintTop_toBottomOf="@+id/LengthOneTextView"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/LengthOneEditText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/LengthOneEditText"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LengthTwoEditText"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/LengthTwoEditText"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LengthOneEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LengthOneEditText"
        app:layout_constraintTop_toBottomOf="@+id/LengthOneEditText"
        app:layout_constraintVertical_bias="0.002" />

    <ImageView
        android:id="@+id/imageViewTriangle"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@mipmap/ic_launcher_triangle" />

    <ImageView
        android:id="@+id/imageViewSquare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCircle"
        app:layout_constraintStart_toEndOf="@+id/imageViewTriangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@mipmap/ic_launcher_square" />

    <ImageView
        android:id="@+id/imageViewCircle"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewSquare"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@mipmap/ic_launcher_circle" />

    <TextView
        android:id="@+id/textViewImageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/TextViewImageTitle"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSquare" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/ButtonCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewImageTitle" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:text="@string/EditTextClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editTextResult"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_border"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="bottom"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />



</android.support.constraint.ConstraintLayout>